--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.3",
     "clsx": "^2.1.1",
     "next": "14.2.3",
     "react": "^18",
