--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.7.3",
+    "@use-gesture/react": "^10.3.1",
     "clsx": "^2.1.1",
     "next": "14.2.3",
     "react": "^18",
@@ -17,23 +18,23 @@
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-    "jsonwebtoken": "^9.0.2",
     "@hookform/resolvers": "^3.1.1",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.263.1",
+    "postcss": "^8",
     "react-hook-form": "^7.45.2",
+    "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.6",
+    "typescript": "^5",
     "zod": "^3.21.4"
   }
 }
