--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.0.9",
     "@react-spring/web": "^9.7.3",
     "@use-gesture/react": "^10.3.1",
     "clsx": "^2.1.1",
