--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.3",
+    "@use-gesture/react": "^10.3.1",
+    "clsx": "^2.1.1",
     "jose": "^5.3.0",
     "jose-node-cjs-runtime": "^5.3.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "@react-spring/web": "^9.7.3",
-    "@use-gesture/react": "^10.3.1",
-    "clsx": "^2.1.1",
+    "mongoose": "^8.3.5",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
