--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "@use-gesture/react": "^10.3.1",
     "bcryptjs": "^2.4.3",
+    "bson": "^6.7.0",
     "clsx": "^2.1.1",
     "jose": "^5.3.0",
     "jose-node-cjs-runtime": "^5.3.0",
