--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "punycode": "^2.3.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-native": "^0.74.1",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-tab-view": "^3.5.2",
     "react-redux": "^9.1.2",
     "tailwind-merge": "^2.3.0",
     "uuid": "^9.0.1"
