--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
+    "sharp": "^0.33.4",
     "tailwind-merge": "^2.3.0",
     "uuid": "^9.0.1",
     "vaul": "^0.9.1"
