--- a/package.json
+++ b/package.json
@@ -10,24 +10,26 @@
   },
   "dependencies": {
     "@radix-ui/react-collapsible": "^1.0.3",
+    "@radix-ui/react-icons": "^1.3.0",
     "@react-spring/web": "^9.7.3",
     "@reduxjs/toolkit": "^2.2.5",
     "@use-gesture/react": "^10.3.1",
     "bcryptjs": "^2.4.3",
     "bson": "^6.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.11.8",
     "jose": "^5.3.0",
     "jose-node-cjs-runtime": "^5.3.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.3.5",
-    "next": "14.2.3",
+    "next": "^14.2.15",
     "punycode": "^2.3.1",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
     "sharp": "^0.33.4",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.5.3",
     "uuid": "^9.0.1",
     "vaul": "^0.9.1"
   },
@@ -47,7 +49,7 @@
     "postcss": "^8",
     "react-hook-form": "^7.45.2",
     "tailwindcss": "^3.4.1",
-    "tailwindcss-animate": "^1.0.6",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5",
     "zod": "^3.21.4"
   }
