--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "prisma generate && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.0",
+    "@prisma/client": "^5.20.0",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-icons": "^1.3.0",
     "@react-spring/web": "^9.7.3",
@@ -22,8 +24,9 @@
     "jose-node-cjs-runtime": "^5.3.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "mongoose": "^8.3.5",
     "next": "^14.2.15",
+    "next-auth": "^5.0.0-beta.22",
+    "prisma": "^5.20.0",
     "punycode": "^2.3.1",
     "react": "^18",
     "react-dom": "^18",
@@ -34,9 +37,9 @@
     "vaul": "^0.9.1"
   },
   "devDependencies": {
-    "@hookform/resolvers": "^3.1.1",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -47,10 +50,10 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.263.1",
     "postcss": "^8",
-    "react-hook-form": "^7.45.2",
+    "react-hook-form": "^7.53.0",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5",
-    "zod": "^3.21.4"
+    "zod": "^3.23.8"
   }
 }
