--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "dev": "prisma generate && next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma": "prisma generate && prisma db push"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.0",
-    "@prisma/client": "^5.20.0",
+    "@prisma/client": "^5.21.1",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-toast": "^1.2.2",
     "@react-spring/web": "^9.7.3",
     "@reduxjs/toolkit": "^2.2.5",
     "@use-gesture/react": "^10.3.1",
@@ -26,7 +28,6 @@
     "lodash": "^4.17.21",
     "next": "^14.2.15",
     "next-auth": "^5.0.0-beta.22",
-    "prisma": "^5.20.0",
     "punycode": "^2.3.1",
     "react": "^18",
     "react-dom": "^18",
@@ -50,6 +51,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.263.1",
     "postcss": "^8",
+    "prisma": "^5.21.1",
     "react-hook-form": "^7.53.0",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
