--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "punycode": "^2.3.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-plock": "^3.2.0",
     "react-redux": "^9.1.2",
     "sharp": "^0.33.4",
     "tailwind-merge": "^2.5.3",
