--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "pick-food",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "prisma generate && next dev",
-    "build": "next build",
+    "build": "prisma generate && prisma db push && next build",
     "start": "next start",
     "lint": "next lint",
     "prisma": "prisma generate && prisma db push"
