--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-spring/web": "^9.7.3",
     "@reduxjs/toolkit": "^2.2.5",
     "@use-gesture/react": "^10.3.1",
+    "@vercel/analytics": "^1.3.2",
     "bcryptjs": "^2.4.3",
     "bson": "^6.7.0",
     "clsx": "^2.1.1",
@@ -42,6 +43,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@types/lodash": "^4.17.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
